--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "clean": "rimraf dist/*",
     "rollup": "rollup -c",
     "tsc": "tsc -p tsconfig.json",
-    "start": "concurrently \"npm run rollup -- --watch\" \"npm run tsc -- -w\"",
-    "build": "npm run clean && npm run tsc && npm run rollup"
+    "copy-css": "cpx \"src/**/*.css\" dist",
+    "start": "concurrently \"npm run rollup -- --watch\" \"npm run tsc -- -w\" \"npm run copy-css -- --watch\"",
+    "build": "npm run clean && npm run tsc && npm run copy-css && npm run rollup"
   },
   "author": "Dan Rouse <dan@rouse.house>",
   "license": "MIT",
@@ -18,11 +19,13 @@
     "@types/jszip": "^3.1.4",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
+    "cpx": "^1.5.0",
     "hasha": "^3.0.0",
     "rich-logger-decorator": "^4.0.0",
     "rimraf": "^2.6.2",
     "rollup-plugin-alias": "^1.5.1",
     "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-css-only": "^0.4.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-replace": "^2.1.0",
     "tslint": "^5.12.0",
