--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@types/jszip": "^3.1.4",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
+    "concurrently": "^4.0.1",
     "cpx": "^1.5.0",
-    "hasha": "^3.0.0",
-    "rich-logger-decorator": "^4.0.0",
     "rimraf": "^2.6.2",
+    "rollup": "^0.65.2",
     "rollup-plugin-alias": "^1.5.1",
+    "rollup-plugin-bundle-hash": "^1.0.0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-css-only": "^0.4.0",
     "rollup-plugin-node-resolve": "^4.0.0",
@@ -34,10 +35,8 @@
     "typescript": "^3.0.3"
   },
   "dependencies": {
-    "concurrently": "^4.0.1",
     "jszip": "^3.1.5",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "rollup": "^0.65.2"
+    "react-dom": "^16.6.3"
   }
 }
