--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "typescript-chrome-extension-base",
+  "name": "web-video-labeler",
   "version": "1.0.0",
-  "description": "Base project for developing a Chrome extension in Typescript",
+  "description": "Label videos on the web for training image classifiers",
   "main": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist/*",
     "rollup": "rollup -c",
     "tsc": "tsc -p tsconfig.json",
-    "copy-css": "cpx \"src/**/*.css\" dist",
-    "start": "concurrently \"npm run rollup -- --watch\" \"npm run tsc -- -w\" \"npm run copy-css -- --watch\"",
-    "build": "npm run clean && npm run tsc && npm run copy-css && npm run rollup",
-    "lint": "tslint -p tsconfig.json"
+    "copy-static": "cpx \"src/**/*.{css,json}\" dist",
+    "crx": "crx pack dist -o dist/web-video-labeler.crx",
+    "lint": "tslint -p tsconfig.json",
+    "build": "npm-run-all --serial clean tsc copy-static rollup crx",
+    "start": "npm-run-all --parallel \"tsc -- -w\" \"copy-static -- -w\" \"rollup -- -w\""
   },
   "author": "Dan Rouse <dan@rouse.house>",
   "license": "MIT",
@@ -20,8 +20,9 @@
     "@types/jszip": "^3.1.4",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
-    "concurrently": "^4.0.1",
     "cpx": "^1.5.0",
+    "crx": "^3.2.1",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.2",
     "rollup": "^0.65.2",
     "rollup-plugin-alias": "^1.5.1",
