--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "scripts": {
     "clean": "rimraf dist/*",
     "rollup": "rollup -c",
+    "rollup:background": "rollup dist/extension/messaging.js --file dist/extension/messaging.bundle.js --format iife -n messaging",
     "tsc": "tsc -p tsconfig.json",
     "copy-static": "cpx \"src/**/*.{css,json}\" dist",
     "crx": "crx pack dist -o dist/web-video-labeler.crx",
     "xpi": "web-ext sign -s dist -a dist -i *.crx -i key.pem",
     "lint": "tslint -p tsconfig.json",
-    "build": "npm-run-all --serial clean tsc copy-static rollup",
+    "build": "npm-run-all --serial clean tsc copy-static rollup rollup:background",
     "package": "npm-run-all --parallel crx xpi",
-    "start": "npm-run-all --parallel -l \"tsc -- -w\" \"copy-static -- -w\" \"rollup -- -w\""
+    "start": "npm-run-all --parallel -l \"tsc -- -w\" \"copy-static -- -w\" \"rollup -- -w\" \"rollup:background -- -w\""
   },
   "author": "Dan Rouse <dan@rouse.house>",
   "license": "MIT",
