reorganize build scripts

--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "repository": "https://github.com/danrouse/web-video-labeler",
   "main": "dist/main.js",
   "scripts": {
-    "clean": "rimraf dist/*",
-    "rollup": "rollup -c",
+    "tsc": "tsc -p tsconfig.json --preserveWatchOutput",
+    "rollup:main": "rollup -c",
     "rollup:background": "rollup dist/extension/messaging.js --file dist/extension/messaging.bundle.js --format iife -n messaging",
-    "tsc": "tsc -p tsconfig.json",
-    "copy-static": "cpx \"src/**/*.{css,json}\" dist",
-    "crx": "crx pack dist -o dist/web-video-labeler.crx",
-    "xpi": "web-ext sign -s dist -a dist -i *.crx -i key.pem",
+    "copy:static": "cpx \"static/**/*\" dist",
+    "copy:css": "cpx \"src/**/*.css\" dist",
+    "pack:crx": "crx pack dist -o dist/web-video-labeler.crx",
+    "pack:xpi": "web-ext sign -s dist -a dist -i *.crx -i key.pem",
     "lint": "tslint -p tsconfig.json",
-    "build": "npm-run-all --serial clean tsc copy-static rollup rollup:background",
-    "package": "npm-run-all --parallel crx xpi",
-    "start": "npm-run-all --parallel -l \"tsc -- -w\" \"copy-static -- -w\" \"rollup -- -w\" \"rollup:background -- -w\""
+    "clean": "rimraf dist/*",
+    "build": "npm-run-all --serial clean tsc copy:* \"rollup:* -- --compact",
+    "pack": "npm-run-all --parallel pack:*",
+    "watch": "npm-run-all --parallel -l \"tsc -- -w\" \"copy:* -- -v -w\" \"rollup:* -- -w\"",
+    "start": "npm run watch"
   },
   "author": "Dan Rouse <dan@rouse.house>",
   "license": "MIT",
