--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,15 +1,26 @@
 {
   "manifest_version": 2,
   "name": "Web Video Labeler",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Label videos on the web for training image classifiers",
-  "content_scripts": [{
-    "matches": ["*://*/*"],
-    "js": ["bundle.js"],
-    "css": ["bundle.css"],
-    "all_frames": true
-  }],
-  "permissions": ["management", "downloads"],
+  "content_scripts": [
+    {
+      "matches": [
+        "*://*/*"
+      ],
+      "js": [
+        "bundle.js"
+      ],
+      "css": [
+        "bundle.css"
+      ],
+      "all_frames": true
+    }
+  ],
+  "permissions": [
+    "management",
+    "downloads"
+  ],
   "background": {
     "scripts": [
       "extension/liveReload.js",
