--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "pack:xpi": "web-ext sign -s dist -a dist -i *.crx -i key.pem",
     "lint": "tslint -p tsconfig.json",
     "clean": "rimraf dist/*",
-    "build": "npm-run-all --serial clean tsc copy:* \"rollup:* -- --compact\"",
+    "build": "NODE_ENV=production npm-run-all --serial clean tsc copy:* \"rollup:* -- --compact\"",
     "pack": "npm-run-all --parallel pack:*",
     "watch": "npm-run-all --parallel -l \"tsc -- -w\" \"copy:* -- -v -w\" \"rollup:* -- -w\"",
     "version": "node -p \"JSON.stringify({ ...require('./static/manifest.json'), version: require('./package.json').version }, null, 2)\" > static/manifest.json && git add static/manifest.json",
