--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "tslint -p tsconfig.json",
     "clean": "rimraf dist/*",
     "build": "NODE_ENV=production npm-run-all --serial clean tsc copy:* \"rollup:* -- --compact\"",
-    "pack": "npm-run-all --parallel pack:*",
+    "pack": "npm run copy:static && npm-run-all --parallel pack:*",
     "watch": "npm-run-all --parallel -l \"tsc -- -w\" \"copy:* -- -v -w\" \"rollup:* -- -w\"",
     "version": "node -p \"require('fs').writeFileSync('static/manifest.json', JSON.stringify({ ...require('./static/manifest.json'), version: require('./package.json').version }, null, 2))\" && git add static/manifest.json",
     "start": "npm run watch"
