big changes: download all data immediately. no zips. rework settings and ui to support changed workflow, with final download step totally removed. darknet still requires post-processing, so include a python script to do that.

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -26,5 +26,8 @@
       "extension/liveReload.js",
       "extension/messaging.bundle.js"
     ]
-  }
+  },
+  "web_accessible_resources": [
+    "prepare_darknet_training_data.py"
+  ]
 }
