--- a/static/manifest.json
+++ b/static/manifest.json
@@ -28,6 +28,7 @@
     ]
   },
   "web_accessible_resources": [
-    "prepare_darknet_training_data.py"
+    "prepare_darknet_training_data.py",
+    "binding-browser.wasm"
   ]
 }
