add aws-sdk: it is non-cooperative w rollup, so use iife bundle and prepend minified script

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "web-ext": "^2.9.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.384.0",
     "dlib-correlation-tracker-js": "file:../dlib-correlation-tracker-js",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
