--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,14 +19,14 @@
     "binding-browser.wasm"
   ],
   "icons": {
-    "16": "icon-16.png",
-    "48": "icon-48.png",
-    "128": "icon-128.png"
+    "16": "icons/icon-16.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
   },
   "page_action": {
     "default_icon": {
-      "19": "icon-inactive-19.png",
-      "38": "icon-inactive-38.png"
+      "19": "icons/icon-inactive-19.png",
+      "38": "icons/icon-inactive-38.png"
     }
   }
 }
