clean up scripts and watch manifest

--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "copy:css": "cpx \"src/**/*.css\" dist",
     "copy:dlib": "cpx \"node_modules/dlib-correlation-tracker-js/dist/binding-browser.wasm\" dist",
     "copy:manifest": "node prepare-manifest.js",
+    "watch:manifest": "chokidar package.json src/manifest.json -c \"npm run copy:manifest\"",
     "pack:crx": "crx pack dist -o dist/web-video-labeler.crx",
     "pack:xpi": "web-ext sign -s dist -a dist -i *.crx -i key.pem",
+    "pack": "npm run copy:manifest && npm-run-all --parallel pack:*",
     "lint": "tslint -p tsconfig.json",
     "clean": "rimraf dist/*",
     "build": "NODE_ENV=production npm-run-all --serial clean tsc copy:* \"rollup:* -- --compact\"",
-    "pack": "npm run copy:manifest && npm-run-all --parallel pack:*",
-    "watch": "npm-run-all --parallel -l \"tsc -- -w\" \"copy:* -- -v -w\" \"rollup:* -- -w\"",
-    "version": "npm run copy:manifest",
+    "watch": "npm-run-all --parallel -l \"tsc -- -w\" \"copy:* -- -v -w\" watch:manifest \"rollup:* -- -w\"",
     "start": "npm run watch"
   },
   "author": "Dan Rouse <dan@rouse.house>",
@@ -29,6 +29,7 @@
     "@types/chrome": "0.0.73",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
+    "chokidar-cli": "^1.2.1",
     "cpx": "^1.5.0",
     "crx": "^3.2.1",
     "npm-run-all": "^4.1.5",
