--- a/package.json
+++ b/package.json
@@ -4,28 +4,43 @@
   "description": "Label videos on the web for training image classifiers",
   "repository": "https://github.com/danrouse/web-video-labeler",
   "homepage": "https://github.com/danrouse/web-video-labeler",
+  "keywords": [
+    "labels",
+    "video",
+    "annotations",
+    "label-annotations",
+    "label-videos",
+    "browser-extension",
+    "firefox",
+    "chrome",
+    "typescript",
+    "rollup"
+  ],
   "main": "dist/main.js",
   "scripts": {
     "tsc": "tsc -p tsconfig.json --preserveWatchOutput",
     "rollup:main": "rollup -c",
-    "rollup:background": "rollup dist/downloads/chrome.js --file dist/downloads/chrome.bundle.js --format iife -n downloads",
+    "rollup:background": "rollup dist/downloads/chrome.js --file dist/downloads-chrome.bundle.js --format iife -n downloads",
     "copy:static": "cpx \"static/**/*\" dist",
     "copy:css": "cpx \"src/**/*.css\" dist",
     "copy:dlib": "cpx \"node_modules/dlib-correlation-tracker-js/dist/binding-browser.wasm\" dist",
-    "copy:manifest": "node prepare-manifest.js",
-    "watch:manifest": "chokidar package.json src/manifest.json -c \"npm run copy:manifest\"",
-    "pack:crx": "crx pack dist -o dist/web-video-labeler.crx",
+    "generate:manifest": "node prepare-manifest.js",
+    "generate:fontawesome": "node prepare-fontawesome.js",
+    "build": "NODE_ENV=production npm-run-all --serial clean tsc copy:* generate:* \"rollup:* -- --compact\"",
+    "pack:crx": "crx pack dist -o dist/web-video-labeler.crx -p key.pem",
     "pack:xpi": "web-ext sign -s dist -a dist -i *.crx -i key.pem",
-    "pack": "npm run copy:manifest && npm-run-all --parallel pack:*",
+    "pack-clean": "rimraf \"dist/!(icons)/\" \"dist/*.map\" dist/.rollup-hash",
+    "pack": "npm-run-all --serial build pack-clean pack:*",
     "lint": "tslint -p tsconfig.json",
     "clean": "rimraf dist/*",
-    "build": "NODE_ENV=production npm-run-all --serial clean tsc copy:* \"rollup:* -- --compact\"",
-    "watch": "npm-run-all --parallel -l \"tsc -- -w\" \"copy:* -- -v -w\" watch:manifest \"rollup:* -- -w\"",
+    "watch:manifest": "chokidar package.json src/manifest.json prepare-manifest.js -c \"npm run generate:manifest\"",
+    "watch": "npm-run-all --parallel -l \"tsc -- -w\" \"copy:* -- -v -w\" generate:* watch:manifest \"rollup:* -- -w\"",
     "start": "npm run watch"
   },
   "author": "Dan Rouse <dan@rouse.house>",
   "license": "MIT",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3",
     "@types/chrome": "0.0.73",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
